--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   random_string: ^2.0.1
   dio: ^3.0.9
   image_gallery_saver: ^1.5.0
+  firebase_auth: 
+  google_sign_in: ^4.5.1
+  gallery_saver: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
